--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+		        	<li><a href="/about">Writings</a></li>
+	        		<li><a href="/cv">Photos</a></li>
+	        		<li><a href="/blog">Reading</a></li>
+	    			<li><a href="/blog">Speaking</a></li>
+	    			<li><a href="/blog">Bio</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,7 +23,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="mailto:q@talkbin.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
 			</footer>
