--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,8 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    #trying new things
+    font-family:'Montserrat';
 }
 p {
     font-size: 1.5em;
