--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">Writings</a></li>
-	        		<li><a href="/cv">Photos</a></li>
+	        		<li><a href="/cv">Photography</a></li>
 	        		<li><a href="/blog">Reading</a></li>
 	    			<li><a href="/blog">Speaking</a></li>
 	    			<li><a href="/blog">Bio</a></li>
