--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ a:hover {
 h1 {
     font-size: 3em;
     #trying new things
-    font-family:'Montserrat';
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
