--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:q@talkbin.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:q@talkbin.com">Contact</a></li>
+	        		<li><a href="https://qasaryounis.com">qasaryounis.com/a></li>
 				</ul>
 			</footer>
 		</body>
