--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:q@talkbin.com">Contact</a></li>
-	        		<li><a href="https://qasaryounis.com">qasaryounis.com/a></li>
+	        		<li><a href="https://qasaryounis.com">qasaryounis.com</a></li>
 				</ul>
 			</footer>
 		</body>
