--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
 		</head>
 		<body>
 			<nav>
+			<style>
+			    ul { display:table; margin:0 auto;}
+			<style>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">Writings</a></li>
