--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,13 @@
 		</head>
 		<body>
 			<nav>
-				<style>
-				    ul { display:table; margin:0 auto;}
-				<style>
+			ul{
+	                margin:0;
+	                padding:0;
+	                text-align: center;
+	                list-style:none;                
+	            	}
+    			ul
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">Writings</a></li>
