--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
 		</head>
 		<body>
 			<nav>
+			
+		        <style type="text/css">
+
+				
 			ul{
 	                margin:0;
 	                padding:0;
@@ -23,6 +27,8 @@
 	    			<li><a href="/blog">Bio</a></li>
 	    		</ul>
 			</nav>
+		        </style>
+
 			<div class="container">
 			
 			{{ content }}
