600px all the time

--- a/style.scss
+++ b/style.scss
@@ -430,6 +430,10 @@ tbody tr:nth-child(odd) th {
   float: right;
 }
 
+#gallerycontainer {
+    width: 600px;
+}
+
 @media screen and (max-width: 850px) {
 
   h1{
