--- a/style.scss
+++ b/style.scss
@@ -440,6 +440,10 @@ tbody tr:nth-child(odd) th {
 
 @media screen and (max-width: 850px) {
 
+  #imageText {height: 65px;
+}
+  
+  
   h1{
     /* font-size: 22px; */
   }
