--- a/style.scss
+++ b/style.scss
@@ -373,7 +373,9 @@ tbody tr:nth-child(odd) th {
 
 #imageText {
   width: 100%;
-  height: 49px;
+  display: table-cell;
+  vertical-align: middle;
+  height: 90px;
 }
 
 .content{
