--- a/style.scss
+++ b/style.scss
@@ -376,6 +376,7 @@ tbody tr:nth-child(odd) th {
   display: table-cell;
   vertical-align: middle;
   height: 90px;
+  padding-bottom: 10px;
 }
 
 .content{
