--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ html {
 
 body {
   color: #515151;
-  background-color: #fff;
+  background-color: #fffff8;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
