--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ html {
 
 body {
   color: #515151;
-  background-color: #f6f5de;
+  background-color: #ffffff;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
