--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ body {
 }
 
 html {
-    font-family: 'PT Sans', sans-serif;  
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 15px;
   font-weight: 400;
   line-height: 1.6;
