--- a/style.scss
+++ b/style.scss
@@ -449,7 +449,12 @@ tbody tr:nth-child(odd) th {
 
 
 @media screen and (max-width: 850px) {
+ 
 
+.hero-image {
+    max-width: 100%;
+}
+  
   #imageText {
     height: 65px;
     width: 600px;
