--- a/style.scss
+++ b/style.scss
@@ -231,8 +231,7 @@ pre code {
 
 img {
   display: block;
-  max-width: 1000px; /* New max width to double size */
-  width: 100%; /* Ensures scaling down if the container is smaller */
+  max-width: 100%;
   margin: 0 0 1rem;
 }
 
