--- a/style.scss
+++ b/style.scss
@@ -395,6 +395,28 @@ tbody tr:nth-child(odd) th {
 .post {
   width: 465px;
   float: left;
+  
+  
+  max-width: 650px;
+  line-height: 1.7;
+  
+  p {
+    margin-bottom: 1.2rem;
+  }
+  
+  h2 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+  }
+  
+  blockquote {
+    margin: 1.5rem 0;
+    padding-left: 1.5rem;
+    border-left: 3px solid #e5e5e5;
+    font-style: italic;
+    color: #666;
+  }
 }
 
 
