--- a/style.scss
+++ b/style.scss
@@ -280,6 +280,7 @@ tbody tr:nth-child(odd) th {
   display: table;
   border-collapse: separate;
   border-spacing: 0;
+  overflow: visible;
 
   @media (min-width: 38rem){
     padding: 4rem 0 4rem 0;
@@ -347,6 +348,7 @@ tbody tr:nth-child(odd) th {
       &:hover,
       &:focus {
         color: #333;
+        font-weight: 600;
         text-decoration: none;
       }
 
@@ -394,6 +396,7 @@ tbody tr:nth-child(odd) th {
     font-size: 13px;
     display: table-cell;
     vertical-align: top;
+    overflow: visible;
 
 }
 
@@ -474,8 +477,54 @@ tbody tr:nth-child(odd) th {
     max-height: 500px;
 }
 
-.hero-image {
+.hero-image-wrapper {
+    position: relative;
+    display: inline-block;
     max-width: 80%;
+}
+
+.hero-image {
+    max-width: 100%;
+    display: block;
+    width: 100%;
+}
+
+.hero-image-wrapper .tooltip {
+    display: none;
+    position: absolute;
+    top: calc(100% + 8px);
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 6px 10px;
+    background-color: #333;
+    color: #fff;
+    font-size: 12px;
+    white-space: nowrap;
+    border-radius: 4px;
+    pointer-events: none;
+    z-index: 10000;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
+
+.hero-image-wrapper .tooltip em {
+    font-style: italic;
+}
+
+.hero-image-wrapper:hover .tooltip {
+    display: block;
+}
+
+.hero-image-wrapper:hover .tooltip::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-bottom-color: #333;
+    pointer-events: none;
 }
 
 
