--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,25 +4,67 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600">
-  <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
+  
+  <!-- Resource hints for performance optimization -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://www.google-analytics.com">
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+  
+  <!-- Preload critical CSS -->
+  <link rel="preload" href="{{ site.baseurl }}/style.css" as="style">
+  
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600&display=swap" crossorigin>
+  <link rel="stylesheet" href="{{ site.baseurl }}/style.css" media="all">
+  
+  <!-- Preload hero image on homepage -->
+  {% if page.url == '/' or page.url == '/index.html' %}
+  <link rel="preload" href="{{ site.baseurl }}/assets/tom5t-adobe-license.png" as="image">
+  {% endif %}
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
   <link rel="shortcut icon" type="image/png" href="{{ "/favicon.ico" | prepend: site.baseurl }}" >
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-84410223-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  
+  <!-- Defer Google Analytics to not block page render -->
+  <script>
+    // Defer GA loading until after page is interactive
+    window.addEventListener('load', function() {
+      setTimeout(function() {
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-84410223-1', 'auto');
+        ga('send', 'pageview');
+      }, 100);
+    });
+  </script>
 {% seo title=false %}
 </head>
 <body>
   <div class="container">
     {{ content }}
   </div>
+  
+  <!-- Service Worker Registration for aggressive caching -->
+  <script>
+  // Register service worker for caching (makes repeat visits instant)
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('{{ site.baseurl }}/sw.js')
+        .then(function(registration) {
+          console.log('ServiceWorker registration successful');
+          
+          // Check for updates periodically
+          setInterval(function() {
+            registration.update();
+          }, 60000); // Check every minute
+        })
+        .catch(function(error) {
+          console.log('ServiceWorker registration failed:', error);
+        });
+    });
+  }
+  </script>
 </body>
 </html>
