Add photo2026 gallery: accessible at /photo2026 but hidden from production nav
- Add photo2026.html with photo gallery
- Add assets-photo2026/ with renamed image files (removed numbers, lowercased)
- Update nav.html to show Photo2026 only in local dev
- Photo2026 accessible at qy.co/photo2026 but not in production navigation

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,9 @@
       <ul class="navlist">
     {% for nav in site.nav %}
     <li class="navitem"><a href="{{site.baseurl}}/{{ nav.href }}" data-prefetch>{{ nav.name }}</a></li>
+    {% if nav.href == "photos" and site.local_dev %}
+    <li class="navitem"><a href="{{site.baseurl}}/photo2026" data-prefetch>Photo2026</a></li>
+    {% endif %}
     {% endfor %}
     </ul>
   </nav>
