--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,10 +6,10 @@
       <ul class="navlist">
     {% for nav in site.nav %}
     <li class="navitem"><a href="{{site.baseurl}}/{{ nav.href }}" data-prefetch>{{ nav.name }}</a></li>
-    {% if nav.href == "photos" and site.local_dev %}
-    <li class="navitem"><a href="{{site.baseurl}}/photo2026" data-prefetch>Photo2026</a></li>
-    {% endif %}
     {% endfor %}
+    {% if site.local_dev %}
+    <li class="navitem"><a href="{{site.baseurl}}/photos2025" data-prefetch>Photos2025</a></li>
+    {% endif %}
     </ul>
   </nav>
 </header>
