--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,10 @@
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
   <meta property="og:description" content="{{ page.description | default: site.description }}">
   <meta property="og:image" content="{{ site.url }}{{ page.image }}">
+  {% if page.image_width and page.image_height %}
+  <meta property="og:image:width" content="{{ page.image_width }}">
+  <meta property="og:image:height" content="{{ page.image_height }}">
+  {% endif %}
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
